# young

./: ex-06-091.ipynb  ex-09-088.ipynb  ex-11-087.ipynb  ex-12-087.ipynb  ex-13-076.ipynb  ex-14-091.ipynb  ex-15-073.ipynb  ex-16-070.ipynb  ex-19-060.ipynb  ex.ipynb  normal-modes.ipynb  pyproject.toml
.ipynb_checkpoints/: ex-06-091-checkpoint.ipynb  ex-07-077-checkpoint.ipynb  ex-08-101-checkpoint.ipynb
