[project]
name = "young"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "oetils>=0.2.11",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
]
